# file-binder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: .gitignore  BUILD  CMakeLists.txt  binder.cpp  elf_parser.cc  elf_parser.h  elf_parser_test.cc  filesystem.cpp  filesystem.h  mlocker.cpp  mlocker.h  mlocker_test.cpp  rlimit.c  scanner.cpp  scanner.h
src/testdata/: BUILD  helloworld.c
